// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User Inputs/PostForm CreateVariant smoke-test 1`] = `
Object {
  "checked": undefined,
  "children": Array [
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Creating Post for user: 271030",
      "pressed": undefined,
      "role": "text",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Title",
      "pressed": undefined,
      "role": "text",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "multiline": true,
      "name": "Title",
      "pressed": undefined,
      "role": "textbox",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Body",
      "pressed": undefined,
      "role": "text",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "multiline": true,
      "name": "Body",
      "pressed": undefined,
      "role": "textbox",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Submit",
      "pressed": undefined,
      "role": "button",
      "value": undefined,
    },
  ],
  "name": "user-inputs-postform--create-variant",
  "pressed": undefined,
  "role": "WebArea",
  "value": undefined,
}
`;

exports[`User Inputs/PostForm UpdateVariant smoke-test 1`] = `
Object {
  "checked": undefined,
  "children": Array [
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Updating Post: 241232",
      "pressed": undefined,
      "role": "text",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Title",
      "pressed": undefined,
      "role": "text",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "multiline": true,
      "name": "Title",
      "pressed": undefined,
      "role": "textbox",
      "value": "Some Title",
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "name": "Body",
      "pressed": undefined,
      "role": "text",
      "value": undefined,
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "multiline": true,
      "name": "Body",
      "pressed": undefined,
      "role": "textbox",
      "value": "Some Body",
    },
    Object {
      "checked": undefined,
      "children": undefined,
      "disabled": true,
      "name": "Submit",
      "pressed": undefined,
      "role": "button",
      "value": undefined,
    },
  ],
  "name": "user-inputs-postform--update-variant",
  "pressed": undefined,
  "role": "WebArea",
  "value": undefined,
}
`;
